--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
     --dark-bg: #222222;
     --light-bg: #333333;
     --yellow: #bac964;
-    --box-sjadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 html{
@@ -115,6 +115,7 @@ section{
 
 .header .navbar a{
 
+    justify-content: center;
     font-size: 1.5rem;
     color: var(--white);
     padding: 0 2rem;
@@ -132,31 +133,35 @@ section{
     display: none;
 }
 
-/*portfolio*/
-
-.portfolio.box-container.box.image{
-
+/* portfolio */
+.portfolio .box-container .box .image {
     height: 30rem;
     overflow: hidden;
     position: relative;
 }
 
-.portfolio.box-container.box.image img{
-
+.portfolio .box-container .box .image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.portfolio.box-container{
+.portfolio .box-container {
 
+
+    padding: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
-    gap: 4rem;
+    /*grid-template-columns: repeat(3, minmax(30rem, 1fr));*/
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 3rem;
 }
 
-.portfolio.box-container.box{
+.portfolio .box-container .box {
 
-    background-color: var(--light-bg);
     
+    background-color: var(--light-bg);
+    padding: 1rem;
+    box-shadow: var(--box-shadow);
 }
+
