--- a/styles.css
+++ b/styles.css
@@ -1,167 +1,52 @@
 *{
-    font-family: 'Segoe UI',sans-serif;
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
-    text-transform: capitalize;
-    transition: 0.2s linear;
-
-}
-
-/* css variables */
-
-:root{
-
-    --white : #fff;
-    --dark-gray : #ababab;
-    --light-gray: #808080;
-    --dark-bg: #222222;
-    --light-bg: #333333;
-    --yellow: #bac964;
-    --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-}
-
-html{
-
-    font-size: 62.5% ;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scroll-padding-top: 6rem ;
 }
 
 body{
 
-    background-color: var(--dark-bg);
+    width: 100%;
+    max-width: 1400px;
+    display: block;
+    margin: auto;
+    min-height: 100vh;
+    background: #191919;
+    font-family: sans-serif;
 }
 
-section{
+.navbar{
 
-    padding: 5rem 9%;
-}
-
-.heading{
-
-    color: var(--white);
-    font-size: 3rem;
-    font-weight: 200;
-    text-align: center;
-    padding-bottom: 4rem;
-
-}
-
-.heading span{
-
-    font-weight: 700;
-
-}
-.home{
-
-    height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/JWST1stImg.png');
-    filter: grayscale(10%);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.home .hero-text{
-
-    font-size: 7rem;
-    color: var(--white);
-    font-weight: 200;
-    line-height: 1.2;
-}
-
-.home .hero-text span{
-
-    font-weight: 500;
-}
-
-.home p{
-
-    color: var(--dark-gray);
-    font-size: 1.5rem;
-    margin-top: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.3rem;
-}
-
-.header{
-
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    padding: 5rem 9%;
-    z-index: 100;
-}
-
-.header .navbar{
-
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center;
-
+    z-index: 9;
+    background: #1a1a1a;
 }
 
-.header .navbar a{
+.link-group{
 
-    justify-content: center;
-    font-size: 1.5rem;
-    color: var(--white);
-    padding: 0 2rem;
-    letter-spacing: 0.3rem;
-    font-weight: 400;
-    text-transform: uppercase;
+    list-style: none;
+    display: flex;
 }
 
-.header .menu{
-
-    font-size: 2.5rem;
-    color: var(--white);
-    cursor: pointer;
-    text-align: left;
-    display: none;
+.link a{
+    color: #fff;
+    opacity: 0.5;
+    text-decoration: none;
+    text-transform: capitalize;
+    padding: 10px 30px;
+    margin: 0 20px;
+    line-height: 80px;
+    transition: .5s;
+    font-size: 20px;
 }
 
-/* portfolio */
-.portfolio .box-container .box .image {
-    height: 30rem;
-    overflow: hidden;
-    position: relative;
+.link a:hover, .link.active a{
+    opacity: 1;
 }
-
-.portfolio .box-container .box .image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.portfolio .box-container {
-
-
-    padding: 3rem;
-    display: grid;
-    /*grid-template-columns: repeat(3, minmax(30rem, 1fr));*/
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 3rem;
-}
-
-.portfolio .box-container .box {
-
-    
-    background-color: var(--light-bg);
-    padding: 1rem;
-    box-shadow: var(--box-shadow);
-}
-
