--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body{
 
     width: 100%;
-    max-width: 1400px;
+    max-width: 1400vh;
     display: block;
     margin: auto;
     min-height: 100vh;
@@ -48,5 +48,141 @@ body{
 }
 
 .link a:hover, .link.active a{
+    opacity: 1;
+}
+.home-section.active,
+.{
+    position: relative;
+    opacity: 1;
+    z-index: 8;
+}
+.home-section{
+    width: 100%;
+    height: 100vh;
+    padding: 0 150px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    transition: 1s;
+}
+
+.hero-heading{
+
+    color: #fff;
+    font-size: 120px;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+
+.home-img{
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 50%;
+    object-fit: cover;
+    opacity: 0.2;
+}
+
+.project-section{
+    width: 100%;
+    min-height: 100vh;
+    padding: 150px 100px 100px;
+    position: fixed;
+    top: 0;
+    transition: 1s;
+    opacity: 0;
+}
+
+.project-heading{
+    font-size: 100px;
+    background: #252525;
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 50px;
+    color: #1a1a1a;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 8px transparent;
+}
+
+.project-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
+}
+
+.project-card{
+    height: 400px;
+    position: relative;
+}
+
+.project-img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    transition: .5s;
+    border-radius: 6px;
+}
+
+.project-content{
+    position: relative;
+    padding: 40px;
+    color: #fff;
+    transition: .5s;
+    opacity: 0;
+}
+
+.project-title{
+    font-size: 50px;
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: 300;
+    color: black;
+}
+
+.project-info{
+    font-weight: bolder;
+    margin: 40px;
+    font-size: 60%;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+}
+
+.project-btn-grp{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+
+.project-btn{
+    height: 40px;
+    text-transform: capitalize;
+    font-size: 18px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.project-btn.live{
+    color: #000;
+    background: none;
+    border: 2px solid #000;
+}
+
+.project-card:hover .project-img{
+    filter: blur(20px);
+    transition: 0.2s;
+}
+
+.project-card:hover .project-content{
     opacity: 1;
 }
