--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box ;
 }
 
 body{
@@ -51,7 +51,7 @@ body{
     opacity: 1;
 }
 .home-section.active,
-.{
+.project-section.active{
     position: relative;
     opacity: 1;
     z-index: 8;
@@ -149,8 +149,8 @@ body{
 .project-info{
     font-weight: bolder;
     margin: 40px;
-    font-size: 60%;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 23px;
     text-align: center;
     color: black;
 }
