--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ body{
 }
 .home-section.active,
 .project-section.active,
-.about-section.active{
+.about-section.active,
+.contact-section.active{
     position: relative;
     opacity: 1;
     z-index: 8;
